practice/ingress/0_svc_nodeport.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: my-app
        image: grafana/grafana
        ports:
        - containerPort: 3000  # Grafana 기본포트 3000
---
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  type: NodePort
  selector:
    app: my-app
  ports:
  - name: http
    nodePort: 30001
    port: 3000
    targetPort: 3000
---


apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app2
  template:
    metadata:
      labels:
        app: my-app2
    spec:
      containers:
      - name: my-app2
        image: provectuslabs/kafka-ui
        ports:
        - containerPort: 8080  # Kafka-ui 기본포트
---
apiVersion: v1
kind: Service
metadata:
  name: my-service2
spec:
  type: NodePort
  selector:
    app: my-app2
  ports:
  - name: http
    nodePort: 30002
    port: 8080
    targetPort: 8080
