practice/ingress/1_ingress.yml
##################
# ingress example
##################

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-monitor
  annotations:
    # kubernetes.io/ingress.class: "nginx"
    # Ingress-nginx에서 '/'로 리다이렉트
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "grafana.monitor.com" 
    http:
      paths:
      # 여러 subpath를 기술하고 리다이렉트 가능 (e.g. monitor.com/grafana, monitor.com/kafka-ui)
      # 단, ingress controller종류마다 이슈가 있음
        # 목적지 container에 path와 동일한 디렉토리가 있어야 하거나, (개별 nginx 설정)
        # 더 subpath로 접근할 때 url리다이렉트 설정이슈 등
      - path: "/"        # subpath를 사용하지 않는다면 "/"만 적는다.
        pathType: Prefix # Prefix, Exact, ImplementationsSpecific. 보통은 Prefix.
        backend:
          service:
            # URL_path에 대한 Request를 특정서비스의 특정포트로 전송
            name: my-service
            port: 
              number: 3000

  - host: "kafka-ui.monitor.com" 
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: my-service2
            port: 
              number: 8080
